# maxwell

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  doxygen.conf  maxwell.C  maxwell.h  test.ps  valgrind.supp
autodoc/html/: annotated.html  classRTFScell-members.html  classRTFScell.html  classRTFScell__coll__graph.map  classRTFScell__coll__graph.md5  classRTFScharacter-members.html  classRTFScharacter.html  classRTFScharacter__coll__graph.map  classRTFScharacter__coll__graph.md5  classRTFSchrfmt.html  (+2121 more)
collection/: CMakeLists.txt  mx_collection.h  mx_iterator.h  mx_list.C  mx_list.h  mx_list_iter.C  mx_list_iter.h  mx_nlist.C  mx_nlist.h  mx_nlist_iter.C  mx_nlist_iter.h
collection/save/: mx_hash.C  mx_hash.h  mx_hash_iter.C  mx_hash_iter.h
db/: CMakeLists.txt  mx_attribute.C  mx_attribute.h  mx_db.h  mx_db_cc.C  mx_db_cc.h  mx_db_client.C  mx_db_client.h  mx_db_object.C  mx_db_object.h  mx_doc_file.C  mx_doc_file.h  mx_file.C  mx_file.h  mx_sl_obj.C  mx_sl_obj.h
dgedit/: CMakeLists.txt  mx_dg_arc.C  mx_dg_editor.C  mx_dg_editor.h  mx_dg_farc.C  mx_dg_fcirc.C  mx_dg_fell.C  mx_dg_grid.C  mx_dg_parc.C  mx_dg_pcirc.C  mx_dg_pell.C  mx_dg_pline.C  mx_dg_point.C  mx_dg_rect.C  mx_dg_select.C  mx_dg_snap.C  mx_dg_span.C  mx_dg_state.C  mx_dg_state.h  mx_dg_top.C  mx_dg_undo.C
dgui/: CMakeLists.txt  mx_dg_menubar.C  mx_dg_menubar.h  mx_dg_toolbar.C  mx_dg_toolbar.h
document/: .mx_font.C.swp  .mx_wp_rp.C.swp  CMakeLists.txt  mx_ap_iter.C  mx_ap_iter.h  mx_area.C  mx_area.h  mx_area_pos.C  mx_area_pos.h  mx_area_style.C  mx_area_style.h  mx_ascii_exporter.C  mx_ascii_exporter.h  mx_ascii_importer.C  mx_ascii_importer.h  mx_bd_style.C  mx_bd_style.h  mx_break_w.C  mx_break_w.h  mx_char_style.C  mx_char_style.h  mx_colour.C  mx_colour.h  mx_complex_w.C  mx_complex_w.h  mx_cw_iter.C  mx_cw_iter.h  mx_cw_t.C  mx_cw_t.h  mx_dash_style.C  mx_dash_style.h  mx_dg_area.C  mx_dg_area.h  mx_dg_dgroup.C  mx_dg_edit.C  mx_dg_filter.C  mx_dg_group.C  mx_dg_iter.C  mx_dg_level.C  mx_dg_lkey.C  (+86 more)
edit/: .mx_wp_editor.C.swp  CMakeLists.txt  maxwellrc  mx_aa.C  mx_aa.h  mx_app.C  mx_app.h  mx_buffer.C  mx_buffer.h  mx_editor.C  mx_editor.h  mx_print_target.C  mx_print_target.h  mx_resources.C  mx_resources.h  mx_ta_buff.C  mx_ta_buff.h  mx_text_buff.C  mx_text_buff.h  mx_undo.C  mx_undo.h  mx_word_iter.C  mx_word_iter.h  mx_wp_area_iter.C  mx_wp_area_iter.h  mx_wp_cursor.C  mx_wp_cursor.h  mx_wp_edit.C  mx_wp_editor.C  mx_wp_editor.h  mx_wp_file.C  mx_wp_format.C  mx_wp_help.C  mx_wp_insert.C  mx_wp_iter.C  mx_wp_iter.h  mx_wp_ob_buff.C  mx_wp_ob_buff.h  mx_wp_style_iter.C  mx_wp_style_iter.h  (+8 more)
font/: CMakeLists.txt  mx_font.C  mx_font.h  mx_font_family.C  mx_font_family.h  mx_font_metrics.C  mx_font_metrics.h  mx_font_metrics_store.C  mx_font_metrics_store.h  mx_font_mod.C  mx_font_mod.h
geometry/: CMakeLists.txt  gaffine.C  garc.C  gbezier.C  geometry.C  geometry.h  geomproto.h  gpline.C  gpoint.C  grectspan.C  gsnap.C  gspline.C  gutil.C  mx_geometry.h
geomstyle/: CMakeLists.txt  mx_astyle.C  mx_geoms.C  mx_gstyle.h  mx_sdarc.C  mx_sdpoly.C  mx_sdrsp.C  mx_sstyle.C  mx_stydev.C  mx_stydev.h  mx_styles.C
geomstyle/stydev/: mx_sdarc.C  mx_sdpoly.C  mx_sdrsp.C  mx_stydev.C  mx_stydev.h
geomstyle/style/: mx_astyle.C  mx_geoms.C  mx_gstyle.h  mx_sstyle.C  mx_styles.C
raster/: CMakeLists.txt  mxraster.C  mxraster.h  rascache.C  rasdib.C  rasdib.h  rasjpeg.C  rasjpeg.h  raspng.C  raspng.h  raster.C  raster.h  rasterComp.C  rasterData.C  rastiff.C  rastiff.h  rasxbm.C  rasxbm.h  traster.C  traster.h
rtf/: CMakeLists.txt  mx_metafile.C  mx_metafile.h  mx_mxmetafile.C  mx_mxmetafile.h  mx_mxmetafile_wr.C  mx_rtfe_conv.C  mx_rtfe_conv.h  mx_rtfe_lu.C  mx_rtfe_lu.h  mx_rtfe_op.C  mx_rtfe_op.h  rtf.C  rtf.h  rtfControl.C  rtfConvert.C  rtfOutput.C  rtfParse.C  rtflocal.h
shared/: .mx_font_metrics.C.swp  .mx_string.C.swp  CMakeLists.txt  mx.h  mx_config.C  mx_config.h  mx_error.C  mx_error.h  mx_error_codes.h  mx_error_stack.C  mx_error_stack.h  mx_file_type.C  mx_file_type.h  mx_language.C  mx_language.h  mx_rtti.h  mx_std.h  mx_stdio.C  mx_stdio.h  mx_string.C  mx_string.h  mx_unit.C  mx_unit.h
ui/: .mx_ui.h.swp  CMakeLists.txt  copyrght.txt  mx_about_d.C  mx_about_d.h  mx_bar.C  mx_bar.h  mx_border_d.C  mx_border_d.h  mx_cell_d.C  mx_cell_d.h  mx_char_d.C  mx_char_d.h  mx_column_d.C  mx_column_d.h  mx_date_d.C  mx_date_d.h  mx_dialog.C  mx_dialog.h  mx_dialog_man.C  mx_dialog_man.h  mx_env_d.C  mx_env_d.h  mx_error_d.C  mx_error_d.h  mx_finfo_d.C  mx_finfo_d.h  mx_goto_d.C  mx_goto_d.h  mx_hsearch_d.C  mx_hsearch_d.h  mx_index_d.C  mx_index_d.h  mx_inform_d.C  mx_inform_d.h  mx_ins_c_d.C  mx_ins_c_d.h  mx_ins_r_d.C  mx_ins_r_d.h  mx_menubar.C  (+63 more)
view/: .mx_pr_device.C.swp  CMakeLists.txt  mx_alay.C  mx_alay.h  mx_area_paint.C  mx_area_paint.h  mx_cb.C  mx_cb.h  mx_dev_clip.C  mx_dev_draw.C  mx_device.C  mx_device.h  mx_dg_paint.C  mx_dg_paint.h  mx_doc_paint.C  mx_doc_paint.h  mx_event.C  mx_event.h  mx_frame.C  mx_frame.h  mx_ftarget.C  mx_ftarget.h  mx_grid_paint.C  mx_grid_paint.h  mx_img_paint.C  mx_img_paint.h  mx_paintable.C  mx_paintable.h  mx_painter.C  mx_painter.h  mx_pframe.C  mx_pframe.h  mx_pr_clip.C  mx_pr_col.C  mx_pr_device.C  mx_pr_device.h  mx_pr_draw.C  mx_pr_ras.C  mx_pr_sty.C  mx_sc_cb.C  (+27 more)
xpm/: CMakeLists.txt  fix.py  gen.py  mx_back.xpm  mx_background.xpm  mx_bold_ins.xpm  mx_bold_lg.xpm  mx_centre_justify_lg.xpm  mx_copy.xpm  mx_cut.xpm  mx_cut_ins.xpm  mx_dashed.xpm  mx_dd_blue.xpm  mx_dd_green.xpm  mx_dd_indigo.xpm  mx_dd_ltblue.xpm  mx_dd_ltindigo.xpm  mx_dd_ltorange.xpm  mx_dd_ltred.xpm  mx_dd_ltviolet.xpm  mx_dd_ltyellow.xpm  mx_dd_orange.xpm  mx_dd_red.xpm  mx_dd_transparent.xpm  mx_dd_yellow.xpm  mx_dotted.xpm  mx_envelope.xpm  mx_footer.xpm  mx_format_columns_ins.xpm  mx_format_paragraph.xpm  mx_format_table.xpm  mx_format_table_ins.xpm  mx_forward_ins.xpm  mx_goto.xpm  mx_help_icon.xpm  mx_indigo.xpm  mx_inform.xpm  mx_insert_page_break_ins.xpm  mx_insert_symbol.xpm  mx_insert_table_ins.xpm  (+24 more)
(+1059 files in other folders)
