cmake_minimum_required(VERSION 3.5)

include_directories(
    ..
    ../collection  
    ../db  
    ../dgedit  
    ../dgui  
    ../document  
    ../edit  
    ../geometry  
    ../geomstyle  
    ../raster  
    ../rtf  
    ../shared  
    ../ui  
    ../view)

add_library(document
    mx_ap_iter.C
    mx_area.C
    mx_area_pos.C
    mx_area_style.C
    mx_ascii_exporter.C
    mx_ascii_importer.C
    mx_bd_style.C
    mx_break_w.C
    mx_char_style.C
    mx_colour.C
    mx_complex_w.C
    mx_cw_iter.C
    mx_cw_t.C
    mx_dash_style.C
    mx_dg_area.C
    mx_dg_dgroup.C
    mx_dg_edit.C
    mx_dg_filter.C
    mx_dg_group.C
    mx_dg_iter.C
    mx_dg_level.C
    mx_dg_lkey.C
    mx_dg_qgeom.C
    mx_dg_qkey.C
    mx_dg_quad.C
    mx_doc_arc.C
    mx_doc.C
    mx_doc_coord.C
    mx_doc_poly.C
    mx_doc_rect.C
    mx_exporter.C
    mx_field_w.C
    mx_fill_style.C
    mx_hatch_style.C
    mx_image_area.C
    mx_im_type.C
    mx_line_style.C
    mx_mod_iter.C
    mx_ole.C
    mx_op_pos.C
    mx_paragraph.C
    mx_para_pos.C
    mx_para_style.C
    mx_p_format.C
    mx_point_style.C
    mx_position.C
    mx_rtf_exporter.C
    mx_rtf_importer.C
    mx_ruler.C
    mx_sheet.C
    mx_simple_w.C
    mx_sizes.C
    mx_space_w.C
    mx_table_area.C
    mx_ta_pos.C
    mx_text_area.C
    mx_txt_pos.C
    mx_word_6.C
    mx_word_6_importer.C
    mx_word.C
    mx_wp_doc.C
    mx_wp_pos.C
    mx_wp_rp.C
    mx_wp_rp_item.C
    mx_wp_sh_pos.C)

