cmake_minimum_required(VERSION 3.5)

include_directories(
    ..
    ../collection  
    ../db  
    ../dgedit  
    ../dgui  
    ../document  
    ../edit  
    ../geometry  
    ../geomstyle  
    ../raster  
    ../rtf  
    ../shared  
    ../ui  
    ../view)

add_library(ui
    mx_about_d.C
    mx_bar.C
    mx_border_d.C
    mx_cell_d.C
    mx_char_d.C
    mx_column_d.C
    mx_date_d.C
    mx_dialog.C
    mx_dialog_man.C
    mx_env_d.C
    mx_error_d.C
    mx_finfo_d.C
    mx_goto_d.C
    mx_hsearch_d.C
    mx_index_d.C
    mx_inform_d.C
    mx_ins_c_d.C
    mx_ins_r_d.C
    mx_menubar.C
    mx_new_d.C
    mx_open_d.C
    mx_opt_d.C
    mx_page_d.C
    mx_para_d.C
    mx_print_d.C
    mx_prog_d.C
    mx_quit_d.C
    mx_replace_d.C
    mx_ruler_bar.C
    mx_save_d.C
    mx_search_d.C
    mx_spell_d.C
    mx_stsbar.C
    mx_style_d.C
    mx_support_d.C
    mx_symbol_d.C
    mx_tab_d.C
    mx_tabf_d.C
    mx_table_d.C
    mx_toc_d.C
    mx_ui_object.C
    mx_valid_d.C
    mx_window.C
    mx_wp_menubar.C
    mx_wp_stsbar.C
    mx_wp_toolbar.C
    mx_yes_no_d.C
    mx_zoom_d.C)
