cmake_minimum_required(VERSION 3.5)

include_directories(
    ..
    ../collection  
    ../db  
    ../dgedit  
    ../dgui  
    ../document  
    ../edit  
    ../geometry  
    ../geomstyle  
    ../raster  
    ../rtf  
    ../shared  
    ../ui  
    ../view)

add_library(view
    mx_alay.C
    mx_area_paint.C
    mx_cb.C
    mx_dev_clip.C
    mx_dev_draw.C
    mx_device.C
    mx_dg_paint.C
    mx_doc_paint.C
    mx_event.C
    mx_frame.C
    mx_ftarget.C
    mx_grid_paint.C
    mx_img_paint.C
    mx_paintable.C
    mx_painter.C
    mx_pframe.C
    mx_pr_clip.C
    mx_pr_col.C
    mx_pr_device.C
    mx_pr_draw.C
    mx_pr_ras.C
    mx_pr_sty.C
    mx_sc_cb.C
    mx_sc_clip.C
    mx_sc_col.C
    mx_sc_device.C
    mx_sc_draw.C
    mx_sc_process.C
    mx_sc_ras.C
    mx_sc_sty.C
    mx_sframe.C
    mx_sh_lay.C
    mx_sh_paint.C
    mx_sh_size.C
    mx_tab_paint.C
    mx_txt_paint.C
    mx_wp_lay.C
    mx_xcb.C
    mx_xframe.C
    propagate.C)
